--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 #header {
-  height: 80px; }
+  height: 5em;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 .row {
   border: 2px solid black; }
@@ -15,10 +18,34 @@ img {
   border: 2px solid black; }
 
 #vs {
+  display: flex;
+  justify-content: space-around;
   align-self: center;
-  text-align: center; }
+  flex: 2; }
+
+#the-fight {
+  display: flex;
+  width: 100%; }
+
+#first-fighter {
+  display: flex;
+  justify-content: center;
+  max-height: 17em;
+  flex: 2; }
+
+#second-fighter {
+  max-height: 17em;
+  flex: 2;
+  display: flex;
+  justify-content: center; }
 
 .battle-items {
-  width: 33%; }
+  width: 33%;
+  display: flex;
+  align-items: center; }
+
+#button-div {
+  display: flex;
+  justify-content: center; }
 
 /*# sourceMappingURL=style.css.map */
