--- a/assets/SASS/main.scss
+++ b/assets/SASS/main.scss
@@ -1,13 +1,17 @@
 $border: 2px solid black;
 
+.row {
+    border: $border;
+}
 #header {
     height: 5em;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 2px none purple;
 }
-.row {
-    border: $border;
+#animals {
+    border: 2px none white;
 }
 img {
     width: 15%;
@@ -29,6 +33,9 @@ img {
 #the-fight {
     display: flex;
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    border: 2px none white;
 }
 #first-fighter {
     display: flex;
